Revision history for ocsreports
2.0.4 
		* fix http://forums.ocsinventory-ng.org/viewtopic.php?pid=45331#p45331
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/893463
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/902510
		* You can add snmp communities with the same name with different version
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/878166
		* sort all select list
		* utf8 patch : http://forums.ocsinventory-ng.org/viewtopic.php?pid=43927#p43927

2.0.3
		* security fix: https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/884340 (XSS)
		* security fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/884273
		* security fix for snmp https://bugs.launchpad.net/ocsinventory-server/+bug/881406
		* use CONF_MYSQL 
		* patch from remi to upgrade 1.3.* to 2.* (to save old values  dbconfig.inc.php)
 		* fix: add computer's name on delete popup
		* security fix (CVE-2011-4024) - more flexible (UTF8 correction)
2.0.2
		* add bios date on all computers and sort on date
		* fix for security alert tx to Nicolas DEROUET (CVE-2011-4024)
		* fix bug on "Machines not see since more of x day(s)" see http://forums.ocsinventory-ng.org/viewtopic.php?pid=43148#p43148
		* fix bug on accountinfo filter (http://forums.ocsinventory-ng.org/viewtopic.php?pid=43061#p43061)
		* update polish language file. tx to Piotr Adamcio
		* fix bug on softwares detail on computer
		* sort categories on dictionary
2.0.1
		* fix bug on order by ip addresses (http://forums.ocsinventory-ng.org/viewtopic.php?pid=42066)
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/842809
		* configure the defaut number result by page
		* add message for max_allowed_packet MySQL conf
		* fix logout of CAS connexion (http://forums.ocsinventory-ng.org/viewtopic.php?pid=41923#p41923)
		* fix bug on package search
		* show macaddress info and fix bug on link.