@@ -1,5 +1,6 @@
 Revision history for ocsreports
 2.0.4 
+		* add LDAP group merbership lookups.(http://forums.ocsinventory-ng.org/viewtopic.php?pid=45215)
 		* fix http://forums.ocsinventory-ng.org/viewtopic.php?pid=45331#p45331
 		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/893463
 		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/902510
